Add ambient occlusion

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
     <title>Everything</title>
-</head>
-<body>
-    <h1>Everything</h1>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <div id="container">
+      <h1>Everything</h1>
+      <canvas id="stage" width="600" height="600"></canvas>
 
-    <script type="text/javascript" src="dist/bundle.js"></script>
-</body>
+      <script type="text/javascript" src="dist/bundle.js"></script>
+    </div>
+  </body>
 </html>
